GNOME Bugzilla – Bug 611663
CALDAV_DEBUG=all and authenticating proxy causes segfault
Last modified: 2010-04-10 16:19:23 UTC
Using gnome-2-28 in fact. I am trying to debug proxies and CalDAV. I got some wonderful help on #evolution regarding http://wiki.davical.org/w/CalDAV_Clients/Evolution which showed me: $ export CALDAV_DEBUG=all and that is great with one exception. If the proxy one wants to use allows the SOUP connection through the proxy without authorization, all goes fine and in fact CalDAV (using Google's calendar as the sample server) through a proxy works fine. When the proxy requires authorization, it doesn't work (but this is not the bug I am filing -- that one is filed already) so I was going to use "CALDAV_DEBUG=all" to help debug, but e-d-s segfaults after displaying the "407" (authorization required) response from the proxy server. Witness: > CONNECT www.google.com:443 HTTP/1.1 > Soup-Debug-Timestamp: 1267579836 > Soup-Debug: SoupSessionSync 1 (0x8548808), SoupMessage 1 (0x86ad750), SoupSocket 1 (0x85488b8) > Host: www.google.com < HTTP/1.0 407 Proxy Authentication Required < Soup-Debug-Timestamp: 1267579836 < Soup-Debug: SoupMessage 1 (0x86ad750) < Server: squid/3.1.0.14 < Mime-Version: 1.0 < Date: Wed, 03 Mar 2010 01:30:36 GMT < Content-Type: text/html < Content-Length: 3048 < X-Squid-Error: ERR_CACHE_ACCESS_DENIED 0 < Vary: Accept-Language < Content-Language: en < Proxy-Authenticate: Negotiate < Proxy-Authenticate: Basic realm="Squid proxy-caching web server" < X-Cache: MISS from proxy < X-Cache-Lookup: NONE from proxy:3128 < Via: 1.0 proxy (squid/3.1.0.14) < Proxy-Connection: close < < <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd"> < <html><head> < <meta http-equiv="Content-Type" content="text/html; charset=utf-8"> < <title>ERROR: Cache Access Denied</title> [ HTML body content informing the user of the cache access being denied deleted ] < < <br> < </div> < < <hr> < <div id="footer"> < <p>Generated Wed, 03 Mar 2010 01:30:36 GMT by proxy (squid/3.1.0.14)</p> < <!-- ERR_CACHE_ACCESS_DENIED --> < </div> < </body></html> in server_log_handler (process:18635): GLib-GObject-CRITICAL **: g_object_get_qdata: assertion `G_IS_OBJECT (object)' failed Segmentation fault (core dumped) The stacktrace of the segfault:
+ Trace 220790
The socket=0x0 in frame 2 and frame 1 becomes an object=0x0 in frame 0 which is what causes the segfault.
Thanks for a bug report. The crash itself is in a soup logger, the object eds is using, but not controlling, thus I'm moving this bug to libsoup.
fixed in master. will go into libsoup 2.30.1